kubernetest/backend/redis/configmap.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: backend
spec:
  template:
    spec:
      containers:
        - name: redis
          image: redis:7.2
          command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
          volumeMounts:
            - name: config
              mountPath: /usr/local/etc/redis
      volumes:
        - name: config
          configMap:
            name: redis-config
